--- a/pages/admin/telaAdmin.html
+++ b/pages/admin/telaAdmin.html
@@ -308,114 +308,6 @@
                                 </thead>
                                 <tbody id="listagem-clientes">
                                     <!-- Linhas da tabela clientes -->
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Dipirona</td>
-                                        <td>Remédio</td>
-                                        <td>Vitória</td>
-                                        <td>R$10,00</td>
-                                        <td class="d-flex align-content-center gap-1">
-                                            <button type="button"
-                                                class="btn btn-success justify-content-center d-flex align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    visibility
-                                                </span>
-                                            </button>
-                                            <button type="button"
-                                                class="btn btn-primary d-flex justify-content-center align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    edit_square
-                                                </span>
-                                            </button>
-                                            <button type="button"
-                                                class="btn btn-danger d-flex justify-content-center align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    close
-                                                </span>
-                                            </button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Dipirona</td>
-                                        <td>Remédio</td>
-                                        <td>Vitória</td>
-                                        <td>R$10,00</td>
-                                        <td class="d-flex align-content-center gap-1">
-                                            <button type="button"
-                                                class="btn btn-success justify-content-center d-flex align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    visibility
-                                                </span>
-                                            </button>
-                                            <button type="button"
-                                                class="btn btn-primary d-flex justify-content-center align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    edit_square
-                                                </span>
-                                            </button>
-                                            <button type="button"
-                                                class="btn btn-danger d-flex justify-content-center align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    close
-                                                </span>
-                                            </button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Dipirona</td>
-                                        <td>Remédio</td>
-                                        <td>Vitória</td>
-                                        <td>R$10,00</td>
-                                        <td class="d-flex align-content-center gap-1">
-                                            <button type="button"
-                                                class="btn btn-success justify-content-center d-flex align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    visibility
-                                                </span>
-                                            </button>
-                                            <button type="button"
-                                                class="btn btn-primary d-flex justify-content-center align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    edit_square
-                                                </span>
-                                            </button>
-                                            <button type="button"
-                                                class="btn btn-danger d-flex justify-content-center align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    close
-                                                </span>
-                                            </button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Dipirona</td>
-                                        <td>Remédio</td>
-                                        <td>Vitória</td>
-                                        <td>R$10,00</td>
-                                        <td class="d-flex align-content-center gap-1">
-                                            <button type="button"
-                                                class="btn btn-success justify-content-center d-flex align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    visibility
-                                                </span>
-                                            </button>
-                                            <button type="button"
-                                                class="btn btn-primary d-flex justify-content-center align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    edit_square
-                                                </span>
-                                            </button>
-                                            <button type="button"
-                                                class="btn btn-danger d-flex justify-content-center align-content-center">
-                                                <span class="material-symbols-outlined">
-                                                    close
-                                                </span>
-                                            </button>
-                                        </td>
-                                    </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -658,114 +550,6 @@
                                 <tbody id="listagem-produtos">
                                     <!-- Linhas da tabela -->
 
-                                         <tr>
-                                            <td>1</td>
-                                            <td>Dipirona</td>
-                                            <td>Remédio</td>
-                                            <td>Vitória</td>
-                                            <td>R$10,00</td>
-                                            <td class="d-flex align-content-center gap-1">
-                                                <button type="button"
-                                                    class="btn btn-success justify-content-center d-flex align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        visibility
-                                                    </span>
-                                                </button>
-                                                <button type="button"
-                                                    class="btn btn-primary d-flex justify-content-center align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        edit_square
-                                                    </span>
-                                                </button>
-                                                <button type="button"
-                                                    class="btn btn-danger d-flex justify-content-center align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        close
-                                                    </span>
-                                                </button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Dipirona</td>
-                                            <td>Remédio</td>
-                                            <td>Vitória</td>
-                                            <td>R$10,00</td>
-                                            <td class="d-flex align-content-center gap-1">
-                                                <button type="button"
-                                                    class="btn btn-success justify-content-center d-flex align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        visibility
-                                                    </span>
-                                                </button>
-                                                <button type="button"
-                                                    class="btn btn-primary d-flex justify-content-center align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        edit_square
-                                                    </span>
-                                                </button>
-                                                <button type="button"
-                                                    class="btn btn-danger d-flex justify-content-center align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        close
-                                                    </span>
-                                                </button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Dipirona</td>
-                                            <td>Remédio</td>
-                                            <td>Vitória</td>
-                                            <td>R$10,00</td>
-                                            <td class="d-flex align-content-center gap-1">
-                                                <button type="button"
-                                                    class="btn btn-success justify-content-center d-flex align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        visibility
-                                                    </span>
-                                                </button>
-                                                <button type="button"
-                                                    class="btn btn-primary d-flex justify-content-center align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        edit_square
-                                                    </span>
-                                                </button>
-                                                <button type="button"
-                                                    class="btn btn-danger d-flex justify-content-center align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        close
-                                                    </span>
-                                                </button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Dipirona</td>
-                                            <td>Remédio</td>
-                                            <td>Vitória</td>
-                                            <td>R$10,00</td>
-                                            <td class="d-flex align-content-center gap-1">
-                                                <button type="button"
-                                                    class="btn btn-success justify-content-center d-flex align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        visibility
-                                                    </span>
-                                                </button>
-                                                <button type="button"
-                                                    class="btn btn-primary d-flex justify-content-center align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        edit_square
-                                                    </span>
-                                                </button>
-                                                <button type="button"
-                                                    class="btn btn-danger d-flex justify-content-center align-content-center">
-                                                    <span class="material-symbols-outlined">
-                                                        close
-                                                    </span>
-                                                </button>
-                                            </td>
-                                        </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -773,6 +557,7 @@
                 </div>
             </div>
         </div>
-
+        <script src="../../js/admin/listarClientes.js"></script>
+        <script type="module" src="../../services/api.js"></script>
 </body>
 </html>
